[package]
name = "read-redis-web"
categories = ["redis", "web", "http"]
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "A simple http server for retrieving values from Redis (read only)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-utils = "3.0.0"
mime = "0.3"
redis = {version = "0.21", default-features = false, features = [
  "connection-manager",
  "tokio-comp",
]}
log = "0.4.17"
env_logger = "0.9.1"
serde_json = "1.0"
clap = { version = "4.0.15", features = ["derive"]}
flate2 = "1.0.24"
derive_more = "0.99.17"